--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,46 @@
+// Change sacalafmt to https://github.com/spotify/scio/blob/main/.scalafmt.conf
 version = "3.7.14"
 runner.dialect = scala3
+
+fileOverride {
+  "glob:**/scala-2.12/**" {
+    runner.dialect = scala212
+  }
+}
+maxColumn = 100
+lineEndings=preserve
+binPack.literalArgumentLists = true
+
+continuationIndent {
+  callSite = 2
+  defnSite = 2
+}
+
+newlines {
+  alwaysBeforeMultilineDef = false
+  sometimesBeforeColonInMethodReturnType = true
+}
+
+docstrings.oneline = fold
+docstrings.style = Asterisk
+
+project.git = false
+
+rewrite {
+  rules = [
+    PreferCurlyFors,
+    SortImports,
+    RedundantBraces,
+    RedundantParens,
+    SortModifiers
+  ]
+  redundantBraces.generalExpressions = false
+  redundantBraces.maxLines = 1
+}
+
+project.excludeFilters = [
+  "MultiJoin.scala",
+  "TupleCoders.scala",
+  "scalafix/input/*",
+  "scalafix/output/*"
+]
